--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "parse-md": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
