--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "parse-md": "^3.0.3",
+    "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.54.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.3",
     "gh-pages": "^4.0.0"
   }
 }
