--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,9 +21,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "remark-gfm": "^3.0.1",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
@@ -56,6 +60,7 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.3",
+    "@types/redux-logger": "^3.0.9",
     "gh-pages": "^4.0.0"
   }
 }
