--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
