--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-furi": "^2.0.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
